# faer-wasm

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  STATUS.md
.github/workflows/: evd-tune.yml  lu-tune.yml  svd-roofline.yml  wasm-gate.yml
bench/: BLAS-WASM-PIN.txt  Cargo.toml  ab-crot.mjs  bench.mjs  complexity.mjs  cplx-gemm-ab.mjs  eig-replicate.mjs  evd-tune.mjs  expected-ratios.json  gate.mjs  gemm-tune-ab.mjs  l1-ab.mjs  l1-roofline.mjs  l2-roofline.mjs  l3-roofline.mjs  lu-largen.mjs  lu-tune.mjs  pyodide-vs-faer.mjs  report.mjs  schur-largen.mjs  svd-tune.mjs
bench/src/: lib.rs
blas/: README.md
blas/bench/: Cargo.toml  README.md  l1-roofline.mjs  l2-roofline.mjs  l3-roofline.mjs  packed-gemm-ab.mjs
blas/bench/src/: lib.rs
blas/src/: README.md  c32.rs  c64.rs  kernels.rs  lanes.rs  lib.rs
blas/src/L1/: README.md  caxpy.rs  ccopy.rs  cdotc.rs  cdotu.rs  crotg.rs  cscal.rs  csrot.rs  csscal.rs  cswap.rs  dasum.rs  daxpy.rs  dcopy.rs  ddot.rs  drotg.rs  dzasum.rs  dznrm2.rs  icamax.rs  idamax.rs  isamax.rs  izamax.rs  mod.rs  sasum.rs  saxpy.rs  scasum.rs  scnrm2.rs  snrm2.rs  srot.rs  sscal.rs  sswap.rs  zaxpy.rs  zcopy.rs  zdotc.rs  zdotu.rs  zdrot.rs  zdscal.rs  zrotg.rs  zscal.rs  zswap.rs
blas/src/L2/: cgemv.rs  cgerc.rs  cgeru.rs  chemv.rs  cher.rs  cher2.rs  ctrmv.rs  ctrsv.rs  dgemv.rs  dger.rs  dsymv.rs  dsyr.rs  dsyr2.rs  dtrmv.rs  dtrsv.rs  mod.rs  sgemv.rs  sger.rs  ssymv.rs  ssyr.rs  ssyr2.rs  strmv.rs  strsv.rs  zgemv.rs  zgerc.rs  zgeru.rs  zhemv.rs  zher.rs  zher2.rs  ztrmv.rs  ztrsv.rs
blas/src/L3/: cgemm.rs  chemm.rs  cher2k.rs  cherk.rs  ctrmm.rs  ctrsm.rs  dgemm.rs  dsymm.rs  dsyr2k.rs  dsyrk.rs  dtrmm.rs  dtrsm.rs  mod.rs  sgemm.rs  ssymm.rs  ssyr2k.rs  ssyrk.rs  strmm.rs  strsm.rs  zgemm.rs  zhemm.rs  zher2k.rs  zherk.rs  ztrmm.rs  ztrsm.rs
blas/src/f32/: kernels.rs  lanes.rs  mod.rs
blas/src/l1/: README.md  dnrm2.rs  drot.rs  dscal.rs  dswap.rs  mod.rs  scopy.rs  sdot.rs  srotg.rs
blas/src/l2/: dgemv.rs  dger.rs  dsyr.rs  dsyr2.rs  dtrmv.rs  dtrsv.rs  mod.rs  sgemv.rs  sger.rs  ssyr.rs  (+3 more)
blas/tests/: README.md  level1_f32.rs  level2.rs  level2_f32.rs  level3.rs  level3_f32.rs
docs/: benchmarks-2026-07.md  benchmarks-vs-pyodide-2026-07.md  blas-ab-2026-07.md  blas-layer-plan-2026-07.md  engineer-handoff-2026-07.md  research-eig-svd-wasm-2026-07.md  research-eig-wasm-2026-07.md  research-faer-wasm-2026-07.md  research-lu-wasm-2026-07.md  research-qr-wasm-2026-07.md  research-schur-wasm-2026-07.md  research-svd-wasm-2026-07.md  wasm.md
kernels/: Cargo.toml
kernels/src/: cplx.rs  eigvec.rs  eigvec_cplx.rs  hessenberg.rs  hessenberg_cplx.rs  lib.rs  lu.rs  qr.rs  scalar.rs  schur_small.rs  schur_small_cplx.rs  svd.rs
kernels/tests/: alloc_probe.rs  eigvec.rs  eigvec_cplx.rs  lu.rs  qr.rs  schur_cplx.rs  schur_full.rs  schur_small.rs
patches/: UPSTREAM-BASE.txt
patches/faer-rs/: 0001-fix-32bit-usize-shift.patch  0002-expose-schur-kernels.patch
patches/pulp/: 0003-fix-relaxed-simd-complex-mul-argument-order.patch
schur/: Cargo.toml
schur/src/: complex.rs  lib.rs  real.rs
schur/tests/: accuracy.rs
smoke-test/: Cargo.toml  README.md  browser-check.mjs  check.mjs  determinism.mjs  references.mjs  run.mjs  size-budgets.json
smoke-test/src/: dense_probes.rs  lib.rs
upstream/: GITHUB-ISSUE-32bit-fix.md  PR-32bit-fix-and-wasm-ci.md
(+218 files in other folders)
