[package]
name = "bench-harness"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# wasm builds use `cargo build --lib` (the bin is native-only, needs std)
[[bin]]
name = "native"

[dependencies]
faer = { path = "../faer-rs/faer", default-features = false, features = ["linalg"] }
faer-schur = { path = "../schur" }
faer-wasm-kernels = { path = "../kernels" }
pulp = { path = "../pulp/pulp", default-features = false, features = ["relaxed-simd"] }

# perf profile: the speed end of the AOT spectrum
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

# size profile: what smoke-test/docs recommend for browser payload
[profile.release-z]
inherits = "release"
opt-level = "z"

[patch.crates-io]
pulp = { path = "../pulp/pulp" }
